--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -1,4 +1,4 @@
-.visualization {
+/* .visualization {
   width: 100%;
   height: 100%;
   min-height: 600px;
@@ -28,4 +28,28 @@
   text-align: center;
   line-height: 20px;
   font-weight: bold;
+} */
+
+.visualization {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.legend {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.legend div {
+  margin: 5px 0;
+}
+
+.legend span {
+  padding: 2px 5px;
+  border-radius: 3px;
 }
