--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -78,10 +78,57 @@
 } */
 
 
-.visualization {
+/* .visualization {
   position: relative;
   width: 100%;
   height: calc(100vh - 60px);
+  overflow: hidden;
+}
+
+.graph-info {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 5px;
+  border-radius: 5px;
+  z-index: 1000;
+  font-size: 14px;
+}
+
+.legend {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 5px;
+  border-radius: 5px;
+  z-index: 1000;
+}
+
+.legend div {
+  margin: 5px 0;
+}
+
+.legend span {
+  padding: 2px 5px;
+  border-radius: 3px;
+  font-size: 12px;
+}
+
+.no-data-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-size: 18px;
+  color: #ffffff;
+} */
+
+.visualization {
+  width: 100%;
+  height: calc(100vh - 60px);
+  position: relative;
   overflow: hidden;
 }
 
