--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -1,7 +1,13 @@
 
-.visualization {
+/* .visualization {
   width: 100%;
   height: calc(100vh - 60px);
+  position: relative;
+  overflow: hidden;
+} */
+.visualization {
+  width: 100%;
+  height: 100%;
   position: relative;
   overflow: hidden;
 }
